# MatchVibe

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  ruff.toml
matchvibe/app/: app.py  database.py  main.py
matchvibe/app/frontend/: about.html  footer.html  header.html  index.html  profile.html  references.html  settings.html
matchvibe/app/frontend/css/: about.css  index.css  profile.css  references.css
matchvibe/app/users/: router.py  schemas.py
matchvibe/frontend/static/: index.html  styles.css
matchvibe/ml/: model.py
